website/themes/beastie/assets/styles/main.css
/* ... */
.sub-menu .title a {
  font-weight: bolder;
}

.search-donate-container {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.search {
  display: flex;
  width: 150px;
  min-width: 150px;
  border-radius: .4rem;
  background-color: var(--white);
  border: 1px solid var(--white);
  margin-right: .5rem;
}

.search input[type='text'] {
  display: inline-block;
  width: 100%;
  min-width: 0;
  padding: .3rem .5rem;
  border: none;
  border-radius: .4rem;
  appearance: none;
  outline: none;
  background-color: var(--white);
  color: var(--black);
}

.search button {
  flex: 0 0 2rem;
  width: 2rem;
  padding: 0;
  background-color: var(--white);
  border: none;
  border-radius: .4rem;
}

.search button i {
  color: var(--black);
}

.donate {
  margin-left: .5rem;
}

.donate a {
  display: inline-block;
  padding: .45rem .85rem;
  background-color: var(--white);
  border-radius: .4rem;
}

.i18n {
  position: relative;
  display: inline-block;
}

.lang-toggle {
  display: flex;
  list-style: none;
  cursor: pointer;
}

.lang-toggle img {
  height: 1.5rem;
  width: 1.5rem;
}

.lang-dropdown {
  display: none;
  position: absolute;
  top: 100%;
  right: 0;
  background: var(--white);
  border: 1px solid var(--lines-color);
  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
  list-style: none;
  margin: 0;
  padding: 0;
  min-width: 120px;
  z-index: 10;
}

.i18n[open] .lang-dropdown {
  display: block;
}

.lang-dropdown li a {
  display: block;
  padding: 8px 12px;
  text-decoration: none;
  color: #444;
}

.lang-dropdown li a:hover {
  background: #F5F5F5;
}

.lang-dropdown .current-lang {
  font-weight: bold;
  background: #F0F0F0;
  pointer-events: none;
}

@media screen and (max-width: 1300px) {
  .header-container {
    flex-direction: column;
  }

  .logo-menu-bars-container {
    width: 100%;
    padding: .5rem 0;
  }

  nav {
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .menu-bars {
    display: flex;
  }

  .menu {
    display: none;
    width: 100%;
  }

  #menu-bars:checked~nav .menu {
    display: block;
  }

  .menu-item {
    flex-direction: column;
    width: 100%;
    margin-right: 0px;
    border-top: 1px solid var(--white);
    cursor: pointer;
  }

  .menu-item a {
    width: 100%;
  }

  .menu-item a:hover+.sub-menu {
    visibility: visible;
  }

  .menu-item-description {
    display: flex;
    width: 100%;
    cursor: pointer;
  }

  .menu-item-description i {
    margin-left: auto;
  }

  .sub-menu {
    display: none;
    flex-direction: column;
    width: 100%;
    padding: 0px;
    position: static;
    visibility: visible;
    border: none;
    background-color: inherit;
    color: inherit;
    box-shadow: inherit;
  }

  .sub-menu .title {
    display: none;
    border-bottom: none;
  }

  .sub-menu li {
    padding-left: 0px;
    padding-right: 0px;
  }

  #about:checked~.sub-menu,
  #download:checked~.sub-menu,
  #documentation:checked~.sub-menu,
  #community:checked~.sub-menu,
  #developers:checked~.sub-menu,
  #support:checked~.sub-menu {
    display: flex;
  }

  .search-donate-container {
    display: none;
  }

  .search {
    width: 100%;
    min-width: 0;
  }

  #menu-bars:checked~.search-donate-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-left: unset;
  padding-top: .2rem;
  }

  .donate {
    display: flex;
    width: 100%;
    margin-left: unset;
    padding-top: .8rem;
  }

  .donate a {
    width: 100%;
    text-align: center;
  }

  .donate a .heart {
    font-size: 1.2rem;
    color: #D1332E;
  }
}

@media screen and (min-width: 900px) {
  header {
    padding: .5rem 2rem;
  }
}

@media screen and (min-width: 1451px) {
  header {
    padding: .5rem 5rem;
  }
}

/* Home page */
.front-page-band-on {
  background: var(--background-frontpage-band-color);
}

.front-page-band-content {
  max-width: var(--max-width);
  margin: 0px auto;
  padding: var(--main-tag-padding);
  padding-top: 20px;
  padding-bottom: 20px;
}

.main-section {
  margin: 1rem 0 0 0;
}

.freebsd-horizontal .logo-box-image {
  background-image: var(--freebsd-logo-horizontal-image);
}

.logo-box {
  width: 100px;
  height: 100px;
  float: right;
  margin: 5px 10px 20px 20px;
}

.logo-box-image {
  width: 100%;
  height: 100%;
  margin: auto;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: contain;
}

.front-page-logo {
  float: none;
  width: auto;
  height: clamp(100px, 30vw, 180px);
}

.front-page-tagline {
  line-height: normal;
  font-weight: 400;
  font-size: 30px;
  text-align: center;
}

.downloads-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
}

.download-section {
  flex: 0 0 20%;
  min-width: 275px;
  margin: 0;
  margin-top: 50px;
  text-align: center;
}

.download-section-title {
  padding: 2px 0px;
  border-radius: 5px;
  font-size: 18px;
  font-weight: 500;
  margin: 0 0 5px 0;
}

.download-button-release {
  background: var(--download-release-section-background-color);
  color: var(--download-release-section-font-color);
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 14px;
  font-weight: 500;
}

.download-button {
  background: var(--download-section-background-color);
  color: var(--download-section-font-color);
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 14px;
  font-weight: 500;
}

.download-links {
  margin: 5px 0 0 0;
}

.additional-downloads {
  margin: 5px 0;
}

.why-freebsd-flex {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  margin-top: 30px;
}

.why-freebsd-flex-item {
  flex: 1 1 30%;
  min-width: 280px;
}

.why-freebsd-flex-item p {
  padding: 0 20px 0 0;
}

.why-freebsd-flex-item h3 {
  margin-top: 0;
  border-radius: 5px;
  padding: 2px 10px 0 0px;
}

.openzfs .logo-box-image {
  background-image: var(--openzfs-image);
}

.bhyve .logo-box-image {
  background-image: var(--virtualization-image);
}

.jails .logo-box-image {
  background-image: var(--jails-image);
}
/* ... */

